--- a/SISS/Views/Shared/_Layout.cshtml
+++ b/SISS/Views/Shared/_Layout.cshtml
@@ -125,8 +125,9 @@
                                 </a>
                                 <div class="sidebar-submenu">
                                     <ul>
+                                    <ul>
                                         <li>
-                                            <a href="#">Add Crime Record</a>
+                                            <a href="@Url.Action("AddCrimeRecord","Crime")">Add Crime Record</a>
                                         </li>
                                         <li>
                                             <a href="#">Search Crime Record</a>
